--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@beyonk/svelte-mapbox": "^9.1.0",
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-vercel": "^3.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/cookie": "^0.5.1",
+		"@vercel/node": "^2.15.3",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
@@ -32,8 +32,12 @@
 		"vitest": "^0.25.3",
 		"web-vitals": "^3.3.1"
 	},
+	"peerDependencies": {
+		"@types/node": "^14"
+	},
 	"type": "module",
 	"dependencies": {
-		"@vercel/postgres": "^0.4.0"
+		"@vercel/postgres": "^0.4.0",
+		"vercel": "^31.0.1"
 	}
 }
