--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@prisma/client": "^4.13.0",
 		"@vercel/postgres": "^0.4.0",
-		"vercel": "^31.0.1",
-		"@prisma/client": "4.13.0"
-    },
-	"type": "module"
+		"axios": "^1.4.0",
+		"dotenv": "^16.3.1",
+		"vercel": "^31.0.1"
+	}
 }
