--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "sveltekit-2",
 	"version": "0.0.1",
+    "prisma": {
+        "seed": "node prisma/seed.js"
+    },
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -11,7 +14,7 @@
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-        "postinstall": "prisma generate"
+		"postinstall": "prisma generate"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
@@ -20,6 +23,7 @@
 		"@sveltejs/adapter-vercel": "^3.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/cookie": "^0.5.1",
+		"@types/node": "^20.4.0",
 		"@vercel/node": "^2.15.3",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -29,7 +33,8 @@
 		"prisma": "^4.16.2",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
-		"typescript": "^5.0.0",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.0.4",
 		"vite": "^4.3.0",
 		"vitest": "^0.25.3",
 		"web-vitals": "^3.3.1"
@@ -39,9 +44,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@prisma/client": "4.13.0",
 		"@vercel/postgres": "^0.4.0",
-		"vercel": "^31.0.1",
-		"@prisma/client": "4.13.0"
-    },
-	"type": "module"
+		"vercel": "^31.0.1"
+	}
 }
