--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	"peerDependencies": {
 		"@types/node": "^14"
 	},
+	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^4.13.0",
 		"@vercel/postgres": "^0.4.0",
