--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@auth0/auth0-spa-js": "^2.1.0",
 		"@prisma/client": "^4.13.0",
 		"@vercel/postgres": "^0.4.0",
 		"svelte-material-icons": "^3.0.5",
