--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
 		"@auth0/auth0-spa-js": "^2.1.0",
 		"@prisma/client": "^4.13.0",
 		"@vercel/postgres": "^0.4.0",
+		"node": "^20.4.0",
+		"nodejs": "0.0.0",
 		"svelte-material-icons": "^3.0.5",
 		"vercel": "^31.0.1"
 	}
