--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@auth0/auth0-spa-js": "^2.1.0",
 		"@prisma/client": "^4.13.0",
 		"@vercel/postgres": "^0.4.0",
+		"openai": "^3.3.0",
 		"svelte-material-icons": "^3.0.5",
 		"vercel": "^31.0.1"
 	}
