--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-        "postinstall": "prisma generate"
+		"postinstall": "prisma generate"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
@@ -31,6 +31,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"prisma": "^4.16.2",
+		"supabase": "^1.82.6",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"ts-node": "^10.9.1",
@@ -46,6 +47,8 @@
 	"dependencies": {
 		"@auth0/auth0-spa-js": "^2.1.0",
 		"@prisma/client": "^4.13.0",
+		"@supabase/auth-helpers-sveltekit": "^0.10.2",
+		"@supabase/supabase-js": "^2.31.0",
 		"@vercel/postgres": "^0.4.0",
 		"svelte-material-icons": "^3.0.5",
 		"vercel": "^31.0.1"
