--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-        "postinstall": "prisma generate"
+		"postinstall": "prisma generate"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
@@ -47,6 +47,9 @@
 		"@auth0/auth0-spa-js": "^2.1.0",
 		"@prisma/client": "^4.13.0",
 		"@vercel/postgres": "^0.4.0",
+		"ajv": "^8.12.0",
+		"ajv-errors": "^3.0.0",
+		"ajv-formats": "^2.1.1",
 		"svelte-material-icons": "^3.0.5",
 		"vercel": "^31.0.1"
 	}
