--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
 	"dependencies": {
 		"@auth0/auth0-spa-js": "^2.1.0",
 		"@prisma/client": "^4.13.0",
+		"@supabase/supabase-js": "^2.32.0",
 		"@vercel/kv": "^0.2.2",
 		"@vercel/postgres": "^0.4.0",
 		"cheerio": "1.0.0-rc.12",
 		"langchain": "^0.0.120",
 		"openai": "^3.3.0",
 		"svelte-material-icons": "^3.0.5",
-		"vercel": "^31.0.1"
+		"vercel": "^31.0.1",
+		"zod": "^3.21.4"
 	}
 }
