--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"ajv": "^8.12.0",
 		"ajv-errors": "^3.0.0",
 		"ajv-formats": "^2.1.1",
+		"nunjucks": "^3.2.4",
 		"svelte-material-icons": "^3.0.5",
 		"vercel": "^31.0.1"
 	}
