--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"nunjucks": "^3.2.4",
 		"pipedrive": "^21.1.0",
 		"svelte-material-icons": "^3.0.5",
+		"toastr": "^2.1.4",
 		"vercel": "^31.0.1"
 	}
 }
