Add mapboxdraw pkgs

--- a/package.json
+++ b/package.json
@@ -43,16 +43,19 @@
 	"type": "module",
 	"dependencies": {
 		"@auth0/auth0-spa-js": "^2.1.0",
+		"@mapbox/mapbox-gl-draw": "^1.4.2",
 		"@pipedrive/app-extensions-sdk": "^0.9.0",
 		"@prisma/client": "^4.13.0",
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@supabase/supabase-js": "^2.31.0",
+		"@turf/helpers": "^6.5.0",
+		"@turf/points-within-polygon": "^6.5.0",
 		"@vercel/postgres": "^0.4.0",
 		"ajv": "^8.12.0",
 		"ajv-errors": "^3.0.0",
 		"ajv-formats": "^2.1.1",
-		"openai": "4.0.0-beta.12",
 		"nunjucks": "^3.2.4",
+		"openai": "4.0.0-beta.12",
 		"pipedrive": "^21.1.0",
 		"svelte-material-icons": "^3.0.5",
 		"vercel": "^31.0.1"
