--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"ajv": "^8.12.0",
 		"ajv-errors": "^3.0.0",
 		"ajv-formats": "^2.1.1",
+		"mjml": "^4.14.1",
 		"nunjucks": "^3.2.4",
 		"openai": "4.0.0-beta.12",
 		"pipedrive": "^21.1.0",
