--- a/package.json
+++ b/package.json
@@ -48,17 +48,19 @@
 		"@prisma/client": "^4.13.0",
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@supabase/supabase-js": "^2.32.0",
+		"@threlte/core": "^6.0.6",
 		"@vercel/postgres": "^0.4.0",
 		"ajv": "^8.12.0",
 		"ajv-errors": "^3.0.0",
 		"ajv-formats": "^2.1.1",
 		"cheerio": "1.0.0-rc.12",
 		"langchain": "^0.0.120",
-		"openai": "4.0.0-beta.12",
 		"mjml": "^4.14.1",
 		"nunjucks": "^3.2.4",
+		"openai": "4.0.0-beta.12",
 		"pipedrive": "^21.1.0",
 		"svelte-material-icons": "^3.0.5",
+		"three": "^0.155.0",
 		"toastr": "^2.1.4",
 		"vercel": "^31.0.1",
 		"zod": "^3.21.4"
