--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@supabase/supabase-js": "^2.32.0",
 		"@threlte/core": "^6.0.6",
+		"@types/three": "^0.155.1",
 		"@vercel/postgres": "^0.4.0",
 		"ajv": "^8.12.0",
 		"ajv-errors": "^3.0.0",
