--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"openai": "4.0.0-beta.12",
 		"pipedrive": "^21.1.0",
 		"svelte-material-icons": "^3.0.5",
+		"sveltekit-search-params": "^1.0.14",
 		"three": "^0.155.0",
 		"toastr": "^2.1.4",
 		"vercel": "^31.0.1",
