--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	"type": "module",
 	"dependencies": {
 		"@auth0/auth0-spa-js": "^2.1.0",
+		"@mapbox/mapbox-gl-geocoder": "^5.0.1",
 		"@microsoft/microsoft-graph-client": "^3.0.5",
 		"@pipedrive/app-extensions-sdk": "^0.9.0",
 		"@prisma/client": "^4.13.0",
@@ -57,6 +58,7 @@
 		"ajv-formats": "^2.1.1",
 		"cheerio": "1.0.0-rc.12",
 		"langchain": "^0.0.120",
+		"mapbox-gl": "^2.15.0",
 		"mjml": "^4.14.1",
 		"nunjucks": "^3.2.4",
 		"openai": "4.0.0-beta.12",
