--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"postprocessing": "^6.33.0",
 		"svelte-material-icons": "^3.0.5",
 		"three": "^0.155.0",
+		"three.meshline": "^1.4.0",
 		"toastr": "^2.1.4",
 		"vercel": "^31.0.1",
 		"zod": "^3.21.4"
