--- a/package.json
+++ b/package.json
@@ -50,10 +50,10 @@
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@supabase/supabase-js": "^2.32.0",
 		"@threlte/core": "^6.0.6",
+		"@threlte/extras": "^5.4.0",
 		"@turf/boolean-point-in-polygon": "^6.5.0",
 		"@turf/helpers": "^6.5.0",
 		"@turf/points-within-polygon": "^6.5.0",
-		"@threlte/extras": "^5.4.0",
 		"@types/three": "^0.155.1",
 		"@vercel/postgres": "^0.4.0",
 		"ajv": "^8.12.0",
@@ -61,6 +61,7 @@
 		"ajv-formats": "^2.1.1",
 		"cheerio": "1.0.0-rc.12",
 		"langchain": "^0.0.120",
+		"mapbox-gl": "^2.15.0",
 		"mjml": "^4.14.1",
 		"nunjucks": "^3.2.4",
 		"openai": "4.0.0-beta.12",
