--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
 	"name": "sveltekit-2",
 	"version": "0.0.1",
-	"prisma": {
-		"seed": "node prisma/seed.js"
-	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -12,8 +9,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
-		"postinstall": "prisma generate"
+		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
@@ -28,7 +24,6 @@
 		"eslint-plugin-svelte": "^2.30.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
-		"prisma": "^4.16.2",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
 		"ts-node": "^10.9.1",
@@ -46,7 +41,6 @@
 		"@mapbox/mapbox-gl-draw": "^1.4.2",
 		"@microsoft/microsoft-graph-client": "^3.0.5",
 		"@pipedrive/app-extensions-sdk": "^0.9.0",
-		"@prisma/client": "^4.13.0",
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@supabase/supabase-js": "^2.32.0",
 		"@threlte/core": "^6.0.6",
