--- a/package.json
+++ b/package.json
@@ -47,13 +47,14 @@
 		"@microsoft/microsoft-graph-client": "^3.0.5",
 		"@pipedrive/app-extensions-sdk": "^0.9.0",
 		"@prisma/client": "^4.13.0",
+		"@shopify/shopify-api": "^7.5.2",
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@supabase/supabase-js": "^2.32.0",
 		"@threlte/core": "^6.0.6",
+		"@threlte/extras": "^5.4.0",
 		"@turf/boolean-point-in-polygon": "^6.5.0",
 		"@turf/helpers": "^6.5.0",
 		"@turf/points-within-polygon": "^6.5.0",
-		"@threlte/extras": "^5.4.0",
 		"@types/three": "^0.155.1",
 		"@vercel/postgres": "^0.4.0",
 		"ajv": "^8.12.0",
@@ -66,12 +67,13 @@
 		"openai": "4.0.0-beta.12",
 		"pipedrive": "^21.1.0",
 		"postprocessing": "^6.33.0",
+		"shopify-token": "^4.1.0",
 		"svelte-material-icons": "^3.0.5",
 		"sveltekit-search-params": "^1.0.14",
 		"three": "^0.155.0",
 		"three.meshline": "^1.4.0",
 		"toastr": "^2.1.4",
-		"vercel": "^31.0.1",
+		"vercel": "^32.1.0",
 		"zod": "^3.21.4"
 	}
 }
