--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.0",
+		"svelte-carousel": "^1.0.25",
 		"svelte-check": "^3.4.3",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.4",
