--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/adapter-vercel": "^3.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/cookie": "^0.5.1",
+		"@types/jquery": "^3.5.17",
 		"@types/node": "^18.4.0",
 		"@vercel/node": "^2.15.3",
 		"eslint": "^8.28.0",
@@ -25,7 +26,6 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.0",
-		"svelte-carousel": "^1.0.25",
 		"svelte-check": "^3.4.3",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.4",
