--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      
+
+      - uses: supabase/setup-cli@v1
+        with:
+          version: latest
+
+
+      - run: supabase db start
+      - run: supabase db lint
+      - run: supabase test db
+      
+      - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
         with:
           version: 8
@@ -27,17 +39,6 @@ jobs:
           cache: "pnpm"
       - name: run tests?
         run: pnpm run test
-
-      - uses: supabase/setup-cli@v1
-        with:
-          version: latest
-
-
-      - run: supabase db start
-      - run: supabase db lint
-      - run: supabase test db
-
-
 
       - name: Verify generated types are checked in
         run: |
