--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: echo "test"
+      - run: nix develop
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
         with:
