--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "pnpm"
       - run: pnpm install --no-frozen-lockfile
-      - name: run tests?
+      - name: vitest tests
         run: pnpm run test
 
   test:
