--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  vitest-tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
