--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@mapbox/mapbox-gl-draw": "^1.4.2",
 		"@microsoft/microsoft-graph-client": "^3.0.5",
 		"@pipedrive/app-extensions-sdk": "^0.9.0",
+		"@shopify/shopify-api": "^7.6.0",
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@supabase/supabase-js": "^2.32.0",
 		"@threlte/core": "^6.0.6",
