--- a/package.json
+++ b/package.json
@@ -48,8 +48,11 @@
 		"@prisma/client": "^4.13.0",
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@supabase/supabase-js": "^2.32.0",
+		"@theatre/core": "^0.7.0",
+		"@theatre/studio": "^0.7.0",
 		"@threlte/core": "^6.0.6",
 		"@threlte/extras": "^5.4.0",
+		"@threlte/theatre": "^2.1.2",
 		"@types/three": "^0.155.1",
 		"@vercel/postgres": "^0.4.0",
 		"ajv": "^8.12.0",
