--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/adapter-vercel": "^3.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/cookie": "^0.5.1",
+		"@types/jquery": "^3.5.17",
 		"@types/node": "^18.4.0",
 		"@vercel/node": "^2.15.3",
 		"eslint": "^8.28.0",
@@ -47,6 +48,7 @@
 		"@supabase/supabase-js": "^2.32.0",
 		"@threlte/core": "^6.0.6",
 		"@threlte/extras": "^5.4.0",
+		"@turf/area": "^6.5.0",
 		"@turf/boolean-point-in-polygon": "^6.5.0",
 		"@turf/helpers": "^6.5.0",
 		"@turf/points-within-polygon": "^6.5.0",
