--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"ajv-formats": "^2.1.1",
 		"cheerio": "1.0.0-rc.12",
 		"langchain": "^0.0.120",
+		"langsmith": "^0.0.36",
 		"mapbox-gl": "^2.15.0",
 		"mjml": "^4.14.1",
 		"nunjucks": "^3.2.4",
