--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"ajv-errors": "^3.0.0",
 		"ajv-formats": "^2.1.1",
 		"cheerio": "1.0.0-rc.12",
+		"get-stream": "^8.0.1",
 		"isomorphic-fetch": "^3.0.0",
 		"langchain": "^0.0.151",
 		"langsmith": "^0.0.36",
@@ -81,6 +82,7 @@
 		"three.meshline": "^1.4.0",
 		"tiktoken": "^1.0.10",
 		"toastr": "^2.1.4",
+		"uuid": "^9.0.1",
 		"vercel": "^32.1.0",
 		"xero-node": "^4.36.0",
 		"zod": "^3.21.4"
