--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/adapter-vercel": "^3.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/cookie": "^0.5.1",
+		"@types/file-saver": "^2.0.6",
 		"@types/node": "^18.16.19",
 		"@vercel/node": "^2.15.3",
 		"eslint": "^8.28.0",
