--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
 		"ajv-errors": "^3.0.0",
 		"ajv-formats": "^2.1.1",
 		"cheerio": "1.0.0-rc.12",
+		"file-saver": "^2.0.5",
 		"isomorphic-fetch": "^3.0.0",
+		"jszip": "^3.10.1",
 		"langchain": "^0.0.151",
 		"langsmith": "^0.0.36",
 		"mapbox-gl": "^2.15.0",
