--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"@turf/boolean-point-in-polygon": "^6.5.0",
 		"@turf/helpers": "^6.5.0",
 		"@turf/points-within-polygon": "^6.5.0",
+		"@types/nunjucks": "^3.2.5",
 		"@types/three": "^0.155.1",
 		"@vercel/postgres": "^0.4.0",
 		"ajv": "^8.12.0",
