--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"@turf/boolean-point-in-polygon": "^6.5.0",
 		"@turf/helpers": "^6.5.0",
 		"@turf/points-within-polygon": "^6.5.0",
+		"@types/mjml": "^4.7.4",
 		"@types/nunjucks": "^3.2.6",
 		"@types/three": "^0.155.1",
 		"@vercel/postgres": "^0.4.2",
@@ -67,6 +68,7 @@
 		"langchain": "^0.0.151",
 		"langsmith": "^0.0.36",
 		"mapbox-gl": "^2.15.0",
+		"mjml": "^4.14.1",
 		"ml-kmeans": "^6.0.0",
 		"nunjucks": "^3.2.4",
 		"openai": "4.0.0-beta.12",
