--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/kit": "^1.20.4",
 		"@types/cookie": "^0.5.1",
 		"@types/node": "^18.16.19",
+		"@types/svgdom": "^0.1.2",
 		"@vercel/node": "^2.15.3",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -47,6 +48,7 @@
 		"@shopify/shopify-api": "^7.6.0",
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@supabase/supabase-js": "^2.32.0",
+		"@svgdotjs/svg.js": "^3.2.0",
 		"@theatre/core": "^0.7.0",
 		"@theatre/studio": "^0.7.0",
 		"@threlte/core": "^6.0.6",
@@ -79,6 +81,7 @@
 		"svelte-material-icons": "^3.0.5",
 		"svelte-preprocess": "^5.0.4",
 		"sveltekit-search-params": "^1.0.14",
+		"svgdom": "^0.1.19",
 		"three": "^0.155.0",
 		"three.meshline": "^1.4.0",
 		"tiktoken": "^1.0.10",
