--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"ajv-formats": "^2.1.1",
 		"cheerio": "1.0.0-rc.12",
 		"convert-svg-to-png": "^0.6.4",
+		"docx": "^8.2.4",
 		"docxtemplater": "^3.42.0",
 		"docxtemplater-image-hyperlink-module-free": "^1.0.2",
 		"html-to-docx": "^1.8.0",
