--- a/package.json
+++ b/package.json
@@ -87,12 +87,14 @@
 		"svelte-material-icons": "^3.0.5",
 		"svelte-preprocess": "^5.1.0",
 		"sveltekit-search-params": "^1.0.15",
+		"svg-png-converter": "^0.0.9",
+		"svg2img": "^1.0.0-beta.2",
 		"svg2png": "^4.1.1",
 		"three": "^0.155.0",
 		"three.meshline": "^1.4.0",
 		"tiktoken": "^1.0.10",
 		"toastr": "^2.1.4",
-		"vercel": "^32.5.3",
+		"vercel": "^32.3.0",
 		"zod": "^3.22.4"
 	}
 }
