--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"ajv-errors": "^3.0.0",
 		"ajv-formats": "^2.1.1",
 		"cheerio": "1.0.0-rc.12",
+		"dateformat": "^5.0.3",
 		"docx": "^8.2.4",
 		"docxtemplater": "^3.42.0",
 		"docxtemplater-image-hyperlink-module-free": "^1.0.2",
