--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"ajv": "^8.12.0",
 		"ajv-errors": "^3.0.0",
 		"ajv-formats": "^2.1.1",
+		"canvas": "^2.11.2",
 		"cheerio": "1.0.0-rc.12",
 		"dateformat": "^5.0.3",
 		"docx": "^8.2.4",
@@ -89,7 +90,8 @@
 		"svelte-material-icons": "^3.0.5",
 		"svelte-preprocess": "^5.1.0",
 		"sveltekit-search-params": "^1.0.15",
-		"svg2img": "^0.9.4",
+		"svg2img": "^1.0.0-beta.2",
+		"svg2png": "^4.1.1",
 		"three": "^0.155.0",
 		"three.meshline": "^1.4.0",
 		"tiktoken": "^1.0.10",
