wip - allow defining a project area

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"@turf/boolean-point-in-polygon": "^6.5.0",
 		"@turf/helpers": "^6.5.0",
 		"@turf/points-within-polygon": "^6.5.0",
+		"@types/google-maps": "^3.2.6",
 		"@types/mjml": "^4.7.4",
 		"@types/nunjucks": "^3.2.6",
 		"@types/three": "^0.155.1",
