--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
-		"@sveltejs/adapter-vercel": "^3.0.3",
-		"@sveltejs/kit": "^1.27.5",
+		"@sveltejs/adapter-vercel": "^3.1.0",
+		"@sveltejs/kit": "^1.27.6",
 		"@types/cookie": "^0.5.4",
-		"@types/node": "^18.18.9",
+		"@types/node": "^18.18.13",
 		"@types/svgdom": "^0.1.2",
 		"@vercel/node": "^2.15.10",
-		"eslint": "^8.53.0",
+		"eslint": "^8.54.0",
 		"eslint-config-prettier": "^8.10.0",
-		"eslint-plugin-svelte": "^2.35.0",
+		"eslint-plugin-svelte": "^2.35.1",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.2.3",
-		"svelte-check": "^3.6.0",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.2",
 		"ts-node": "^10.9.1",
 		"tsconfig.json": "^1.0.11",
-		"typescript": "^5.2.2",
+		"typescript": "^5.3.2",
 		"vite": "^4.5.0",
 		"vitest": "^0.25.8",
 		"web-vitals": "^3.5.0"
@@ -39,18 +39,18 @@
 	"type": "module",
 	"dependencies": {
 		"@auth0/auth0-spa-js": "^2.1.2",
-		"@azure/identity": "^3.3.2",
+		"@azure/identity": "^3.4.1",
 		"@googlemaps/js-api-loader": "^1.16.2",
 		"@mapbox/mapbox-gl-draw": "^1.4.3",
 		"@microsoft/microsoft-graph-client": "^3.0.7",
 		"@pipedrive/app-extensions-sdk": "^0.9.0",
 		"@shopify/shopify-api": "^7.7.0",
 		"@supabase/auth-helpers-sveltekit": "^0.10.7",
-		"@supabase/supabase-js": "^2.38.4",
+		"@supabase/supabase-js": "^2.38.5",
 		"@svgdotjs/svg.js": "^3.2.0",
 		"@theatre/core": "^0.7.0",
 		"@theatre/studio": "^0.7.0",
-		"@threlte/core": "^6.1.0",
+		"@threlte/core": "^6.1.1",
 		"@threlte/extras": "^5.7.0",
 		"@threlte/theatre": "^2.1.3",
 		"@turf/area": "^6.5.0",
@@ -68,7 +68,7 @@
 		"cheerio": "1.0.0-rc.12",
 		"convert-svg-to-png": "^0.6.4",
 		"dateformat": "^5.0.3",
-		"docxtemplater": "^3.42.0",
+		"docxtemplater": "^3.42.2",
 		"docxtemplater-image-hyperlink-module-free": "^1.0.2",
 		"html-to-docx": "^1.8.0",
 		"isomorphic-fetch": "^3.0.0",
@@ -86,21 +86,21 @@
 		"postprocessing": "^6.33.3",
 		"readline-sync": "^1.4.10",
 		"really-relaxed-json": "^0.3.2",
-		"sharp": "^0.32.6",
 		"sass": "^1.69.5",
+		"sharp": "^0.32.6",
 		"shopify-token": "^4.1.0",
 		"svelte-material-icons": "^3.0.5",
-		"svelte-preprocess": "^5.1.0",
+		"svelte-preprocess": "^5.1.1",
 		"sveltekit-search-params": "^1.0.15",
-		"svgdom": "^0.1.19",
 		"svg-png-converter": "^0.0.9",
-		"svg2img": "^1.0.0-beta.2",
+		"svg2img": "1.0.0-beta.2",
 		"svg2png": "^4.1.1",
+		"svgdom": "^0.1.19",
 		"three": "^0.155.0",
 		"three.meshline": "^1.4.0",
-		"tiktoken": "^1.0.10",
+		"tiktoken": "^1.0.11",
 		"toastr": "^2.1.4",
-		"vercel": "^32.3.0",
+		"vercel": "^32.5.6",
 		"zod": "^3.22.4"
 	}
 }
