--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
 		"readline-sync": "^1.4.10",
 		"really-relaxed-json": "^0.3.2",
 		"sass": "^1.69.5",
+		"scss": "^0.2.4",
 		"sharp": "^0.32.6",
 		"shopify-token": "^4.1.0",
 		"svelte-material-icons": "^3.0.5",
