add script to automatically update campaign areas, informed by files from SharePoint

--- a/package.json
+++ b/package.json
@@ -40,10 +40,16 @@
 	"dependencies": {
 		"@auth0/auth0-spa-js": "^2.1.2",
 		"@azure/identity": "^3.4.1",
+		"@azure/msal-node": "^2.6.0",
 		"@googlemaps/js-api-loader": "^1.16.2",
 		"@mapbox/mapbox-gl-draw": "^1.4.3",
 		"@microsoft/microsoft-graph-client": "^3.0.7",
+		"@microsoft/rush-stack-compiler-4.2": "^0.3.1",
 		"@pipedrive/app-extensions-sdk": "^0.9.0",
+		"@pnp/graph": "^3.20.1",
+		"@pnp/msaljsclient": "^3.20.1",
+		"@pnp/nodejs": "^3.20.1",
+		"@pnp/sp": "^3.20.1",
 		"@shopify/shopify-api": "^7.7.0",
 		"@supabase/auth-helpers-sveltekit": "^0.10.7",
 		"@supabase/supabase-js": "^2.38.5",
@@ -79,6 +85,7 @@
 		"mapbox-gl": "^2.15.0",
 		"mjml": "^4.14.1",
 		"ml-kmeans": "^6.0.0",
+		"msal": "^1.4.18",
 		"nunjucks": "^3.2.4",
 		"openai": "4.0.0-beta.12",
 		"pipedrive": "^21.2.0",
