--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
 		"sass": "^1.69.5",
 		"sharp": "^0.32.6",
 		"shopify-token": "^4.1.0",
+		"svelte-awesome-color-picker": "^2.4.8",
 		"svelte-material-icons": "^3.0.5",
 		"svelte-preprocess": "^5.1.1",
 		"sveltekit-search-params": "^1.0.15",
