--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"ajv-formats": "^2.1.1",
 		"cheerio": "1.0.0-rc.12",
 		"convert-svg-to-png": "^0.6.4",
+		"date-picker-svelte": "^2.10.1",
 		"dateformat": "^5.0.3",
 		"docxtemplater": "^3.42.2",
 		"docxtemplater-image-hyperlink-module-free": "^1.0.2",
