--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"@turf/boolean-point-in-polygon": "^6.5.0",
 		"@turf/helpers": "^6.5.0",
 		"@turf/points-within-polygon": "^6.5.0",
+		"@turf/turf": "^6.5.0",
 		"@types/google-maps": "^3.2.6",
 		"@types/mjml": "^4.7.4",
 		"@types/nunjucks": "^3.2.6",
@@ -80,8 +81,10 @@
 		"dateformat": "^5.0.3",
 		"docxtemplater": "^3.42.2",
 		"docxtemplater-image-hyperlink-module-free": "^1.0.2",
+		"evoweb-geoxml3": "^1.0.0",
 		"html-to-docx": "^1.8.0",
 		"isomorphic-fetch": "^3.0.0",
+		"jsdom": "^24.0.0",
 		"jszip": "^3.10.1",
 		"juice": "^9.1.0",
 		"langchain": "^0.0.151",
@@ -112,7 +115,10 @@
 		"three.meshline": "^1.4.0",
 		"tiktoken": "^1.0.11",
 		"toastr": "^2.1.4",
+		"turf": "^3.0.14",
 		"vercel": "^32.5.6",
+		"xml2js": "^0.6.2",
+		"xmldom": "^0.6.0",
 		"zod": "^3.22.4"
 	}
 }
