--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
 		"ajv-errors": "^3.0.0",
 		"ajv-formats": "^2.1.1",
 		"cheerio": "1.0.0-rc.12",
+		"circular-json": "^0.5.9",
 		"convert-svg-to-png": "^0.6.4",
 		"d3": "^7.8.5",
 		"date-picker-svelte": "^2.10.1",
